// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot with label 1`] = `
<div
  className="group"
>
  <input
    className="form-input"
    name="name"
    onChange={[MockFunction]}
    required={false}
    type="email"
    value="value"
  />
  <label
    className="shrink form-input-label"
  >
    asdf
  </label>
</div>
`;

exports[`should match snapshot without label 1`] = `
<div
  className="group"
>
  <input
    className="form-input"
    name="name"
    onChange={[MockFunction]}
    required={false}
    type="email"
    value="value"
  />
</div>
`;

exports[`should match snapshot without value 1`] = `
<div
  className="group"
>
  <input
    className="form-input"
    name="name"
    onChange={[MockFunction]}
    required={false}
    type="email"
    value=""
  />
  <label
    className=" form-input-label"
  >
    asdf
  </label>
</div>
`;
